Checkpoint current state of things. :)